ini-persist/tests/compile-fail/unsupported_repr.rs
use ini_persist::Property;

#[derive(Property)]
#[ini(repr)]
#[repr(C)]
enum Foo {
    Arglebargle,
    GlopGlyf,
}

fn main() {
}
