ini-persist/tests/compile-fail/unsupported_repr.stderr
error: unsupported repr
 --> tests/compile-fail/unsupported_repr.rs:5:8
  |
5 | #[repr(C)]
  |        ^
